--- a/CloudDocs/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/CloudDocs/Views/Storyboards/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="AZs-Rm-LGu">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="euX-Fa-m7F">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
@@ -53,7 +53,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-151" y="758"/>
+            <point key="canvasLocation" x="757.97101449275374" y="757.36607142857144"/>
         </scene>
         <!--Scanner View Controller-->
         <scene sceneID="6EA-Xg-D00">
@@ -111,7 +111,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="su8-KR-jCb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-152" y="2220"/>
+            <point key="canvasLocation" x="758" y="2220"/>
         </scene>
         <!--Document View Controller-->
         <scene sceneID="pcc-dr-K2R">
@@ -162,12 +162,20 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="dY8-yE-fLn">
-                        <barButtonItem key="rightBarButtonItem" title="Delete" id="XD0-9T-jjB">
-                            <color key="tintColor" systemColor="systemRedColor"/>
-                            <connections>
-                                <action selector="deletePressed:" destination="LrJ-0E-Lb7" id="D0H-nK-6UI"/>
-                            </connections>
-                        </barButtonItem>
+                        <rightBarButtonItems>
+                            <barButtonItem systemItem="trash" id="XD0-9T-jjB">
+                                <color key="tintColor" systemColor="systemRedColor"/>
+                                <connections>
+                                    <action selector="deletePressed:" destination="LrJ-0E-Lb7" id="D0H-nK-6UI"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem title="Item" image="square.and.arrow.up" catalog="system" landscapeImage="square.and.arrow.up" largeContentSizeImage="square.and.arrow.up" id="mnn-Og-EtP">
+                                <color key="tintColor" name="AccentColor"/>
+                                <connections>
+                                    <action selector="sharePressed:" destination="LrJ-0E-Lb7" id="UCG-WA-6bT"/>
+                                </connections>
+                            </barButtonItem>
+                        </rightBarButtonItems>
                     </navigationItem>
                     <connections>
                         <outlet property="documentFieldsTableView" destination="312-Pf-fBr" id="PFe-Vi-uan"/>
@@ -178,7 +186,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xrq-D0-I0j" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="619" y="1049"/>
+            <point key="canvasLocation" x="1528.985507246377" y="1048.6607142857142"/>
         </scene>
         <!--Preview View Controller-->
         <scene sceneID="Tys-e2-3Cc">
@@ -208,7 +216,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dNw-wp-YFx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1390" y="1049"/>
+            <point key="canvasLocation" x="2300" y="1048.6607142857142"/>
         </scene>
         <!--Code View Controller-->
         <scene sceneID="L0y-TA-t14">
@@ -257,7 +265,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="haH-lI-Ak0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1390" y="339"/>
+            <point key="canvasLocation" x="2300" y="338.83928571428572"/>
         </scene>
         <!--Account View Controller-->
         <scene sceneID="0rf-am-VGm">
@@ -282,7 +290,7 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="C9A-uj-qMN">
-                        <barButtonItem key="rightBarButtonItem" title="Sign Out" id="f5r-1Z-gb2">
+                        <barButtonItem key="rightBarButtonItem" title="Sign Out" image="rectangle.portrait.and.arrow.right" catalog="system" landscapeImage="rectangle.portrait.and.arrow.right" largeContentSizeImage="rectangle.portrait.and.arrow.right" id="f5r-1Z-gb2">
                             <color key="tintColor" systemColor="systemRedColor"/>
                             <connections>
                                 <action selector="signOutPressed:" destination="vn8-Pa-jAm" id="b1g-2g-hIx"/>
@@ -296,7 +304,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="c9B-yU-6ef" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="619" y="339"/>
+            <point key="canvasLocation" x="1528.985507246377" y="338.83928571428572"/>
         </scene>
         <!--New Document View Controller-->
         <scene sceneID="fGF-CH-Yko">
@@ -335,7 +343,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LQ7-hR-yap" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-888" y="2220"/>
+            <point key="canvasLocation" x="-726" y="2220"/>
         </scene>
         <!--Add Document View Controller-->
         <scene sceneID="5hq-3e-LTT">
@@ -373,7 +381,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="U2f-AZ-6NC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-888" y="2974"/>
+            <point key="canvasLocation" x="22" y="2220"/>
         </scene>
         <!--Shared View Controller-->
         <scene sceneID="dVo-d1-SEh">
@@ -411,7 +419,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7l1-1T-HSS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-152.17391304347828" y="2973.8839285714284"/>
+            <point key="canvasLocation" x="1529" y="2220"/>
         </scene>
         <!--Welcome View Controller-->
         <scene sceneID="aBf-II-zyN">
@@ -502,7 +510,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xnh-Jt-HiE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-3923" y="757"/>
+            <point key="canvasLocation" x="-3013.04347826087" y="756.69642857142856"/>
         </scene>
         <!--Sign Up View Controller-->
         <scene sceneID="dmB-DS-WE2">
@@ -611,7 +619,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WmA-Xh-QnW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-3159" y="339"/>
+            <point key="canvasLocation" x="-2249.275362318841" y="338.83928571428572"/>
         </scene>
         <!--Sign In View Controller-->
         <scene sceneID="KtR-fP-dN7">
@@ -710,7 +718,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zox-bW-gtE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-3159" y="1049"/>
+            <point key="canvasLocation" x="-2249.275362318841" y="1048.6607142857142"/>
         </scene>
         <!--Passcode View Controller-->
         <scene sceneID="l15-qh-e0u">
@@ -960,7 +968,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fGA-rW-iOw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1636" y="757"/>
+            <point key="canvasLocation" x="-726.08695652173924" y="756.69642857142856"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="wAf-Dh-kn9">
@@ -979,7 +987,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YrK-b6-fu5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-887" y="758"/>
+            <point key="canvasLocation" x="21.739130434782609" y="757.36607142857144"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="3Kb-PW-iRx">
@@ -998,7 +1006,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ow2-Gi-c1R" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-4719" y="757"/>
+            <point key="canvasLocation" x="-3810.144927536232" y="756.69642857142856"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="lhT-F1-1KY">
@@ -1017,7 +1025,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="anH-uf-9NA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2387" y="756"/>
+            <point key="canvasLocation" x="-1478.2608695652175" y="755.35714285714278"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="ZYK-zm-2YE">
@@ -1035,7 +1043,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Px8-en-eRc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-888" y="1487"/>
+            <point key="canvasLocation" x="22" y="1487"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="TFq-sl-MDZ">
@@ -1053,19 +1061,81 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mp0-Hz-Wtv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-152.17391304347828" y="1486.6071428571429"/>
+            <point key="canvasLocation" x="758" y="1487"/>
+        </scene>
+        <!--Launch View Controller-->
+        <scene sceneID="cws-LZ-3gp">
+            <objects>
+                <viewController id="GGP-KX-OPC" customClass="LaunchViewController" customModule="CloudDocs" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="jC2-Kb-Ihc">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Background" translatesAutoresizingMaskIntoConstraints="NO" id="Me9-JX-DhT">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="e8D-Qw-r0I">
+                                <rect key="frame" x="82" y="323" width="250" height="250"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="250" id="1tb-j1-7Ks"/>
+                                    <constraint firstAttribute="height" constant="250" id="rBp-lt-ZNw"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="2TB-dh-Asu"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="e8D-Qw-r0I" firstAttribute="centerX" secondItem="jC2-Kb-Ihc" secondAttribute="centerX" id="Ld1-rV-K1A"/>
+                            <constraint firstAttribute="bottom" secondItem="Me9-JX-DhT" secondAttribute="bottom" id="Mcp-0Q-Gkb"/>
+                            <constraint firstItem="Me9-JX-DhT" firstAttribute="leading" secondItem="2TB-dh-Asu" secondAttribute="leading" id="VFf-p4-5f3"/>
+                            <constraint firstItem="e8D-Qw-r0I" firstAttribute="centerY" secondItem="jC2-Kb-Ihc" secondAttribute="centerY" id="m9G-LI-WIg"/>
+                            <constraint firstItem="Me9-JX-DhT" firstAttribute="trailing" secondItem="2TB-dh-Asu" secondAttribute="trailing" id="vfV-Xk-JKe"/>
+                            <constraint firstItem="Me9-JX-DhT" firstAttribute="top" secondItem="jC2-Kb-Ihc" secondAttribute="top" id="ykd-MW-Cqz"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="lVe-iy-fHD"/>
+                    <connections>
+                        <segue destination="AZs-Rm-LGu" kind="presentation" identifier="LaunchToWelcome" modalPresentationStyle="fullScreen" id="f5B-Tk-BSH"/>
+                        <segue destination="ib5-58-Ph5" kind="presentation" identifier="LaunchToPasscode" modalPresentationStyle="fullScreen" id="ex6-yL-orb"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Oql-V2-DTb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-4631.884057971015" y="756.69642857142856"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Xfd-V4-lIc">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="euX-Fa-m7F" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="aut-bP-QD5">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="GGP-KX-OPC" kind="relationship" relationship="rootViewController" id="ZGg-r5-OXq"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yu3-zl-gYK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-5442" y="755"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="Clf-s7-Iap"/>
+        <segue reference="ex6-yL-orb"/>
+        <segue reference="f5B-Tk-BSH"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="Account" width="170.5" height="170.5"/>
+        <image name="Background" width="333" height="333"/>
         <image name="Logo" width="333" height="333"/>
         <image name="WelcomeImage" width="1333" height="2000"/>
         <image name="chevron.backward" catalog="system" width="96" height="128"/>
         <image name="delete.backward.fill" catalog="system" width="128" height="104"/>
         <image name="qrcode" catalog="system" width="128" height="114"/>
+        <image name="rectangle.portrait.and.arrow.right" catalog="system" width="128" height="108"/>
+        <image name="square.and.arrow.up" catalog="system" width="115" height="128"/>
         <namedColor name="AccentColor">
             <color red="0.2199999988079071" green="0.38400000333786011" blue="0.98400002717971802" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
