--- a/CloudDocs/Views/Cells/AddButtonTableViewCell.xib
+++ b/CloudDocs/Views/Cells/AddButtonTableViewCell.xib
@@ -10,18 +10,18 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ScanDocumentTableViewCell" id="KGk-i7-Jjw" customClass="ScanDocumentTableViewCell" customModule="CloudDocs" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="AddButtonTableViewCell" id="KGk-i7-Jjw" customClass="AddButtonTableViewCell" customModule="CloudDocs" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bCy-HN-x8d">
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tM6-qm-Vhd">
                         <rect key="frame" x="16" y="2" width="288" height="40"/>
                         <color key="backgroundColor" name="AccentColor"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="40" id="4ji-nW-5zR"/>
+                            <constraint firstAttribute="height" constant="40" id="CvD-si-Vqh"/>
                         </constraints>
                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <state key="normal" title="Button"/>
@@ -29,17 +29,17 @@
                     </button>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="bCy-HN-x8d" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="2" id="4sM-OZ-5f2"/>
-                    <constraint firstItem="bCy-HN-x8d" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="A7f-2Y-eed"/>
-                    <constraint firstAttribute="trailing" secondItem="bCy-HN-x8d" secondAttribute="trailing" constant="16" id="RHO-P1-yhI"/>
-                    <constraint firstAttribute="bottom" secondItem="bCy-HN-x8d" secondAttribute="bottom" constant="2" id="eK0-eq-DKG"/>
+                    <constraint firstAttribute="bottom" secondItem="tM6-qm-Vhd" secondAttribute="bottom" constant="2" id="8eF-lK-pJP"/>
+                    <constraint firstAttribute="trailing" secondItem="tM6-qm-Vhd" secondAttribute="trailing" constant="16" id="NHU-n7-BHI"/>
+                    <constraint firstItem="tM6-qm-Vhd" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="UcC-nK-16j"/>
+                    <constraint firstItem="tM6-qm-Vhd" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="2" id="wVu-J3-hHC"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="scanDocumentButton" destination="bCy-HN-x8d" id="PcZ-yk-IDU"/>
+                <outlet property="addButton" destination="tM6-qm-Vhd" id="NNT-p2-HoO"/>
             </connections>
-            <point key="canvasLocation" x="139" y="96"/>
+            <point key="canvasLocation" x="137.68115942028987" y="95.758928571428569"/>
         </tableViewCell>
     </objects>
     <resources>
