CloudDocs Premium Trial

--- a/CloudDocs/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/CloudDocs/Views/Storyboards/Base.lproj/Main.storyboard
@@ -1357,9 +1357,9 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="Tcu-LK-gLn"/>
-        <segue reference="ex6-yL-orb"/>
-        <segue reference="f5B-Tk-BSH"/>
+        <segue reference="7Dk-qp-0xY"/>
+        <segue reference="Clf-s7-Iap"/>
+        <segue reference="mh8-Hy-uNR"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="Account" width="170.5" height="170.5"/>
